--- a/signup.html
+++ b/signup.html
@@ -9,14 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Login</title>
+    <title>Signup</title>
   </head>
   <body>
     <div
-      id="LoginApp"
+      id="SignupApp"
       class="d-flex align-items-center py-4"
       style="height: 100vh"
     ></div>
-    <script type="module" src="/src/membership/loginPage.tsx"></script>
+    <script type="module" src="/src/membership/signupPage.tsx"></script>
   </body>
 </html>
