--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     />
     <title>Board</title>
   </head>
-  <body>
+  <body data-bs-theme="dark">
     <div id="root"></div>
-    <script type="module" src="/src/boardMain.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
