--- a/signup.html
+++ b/signup.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <div
-      id="SignupApp"
+      id="App"
       class="d-flex align-items-center py-4"
       style="height: 100vh"
     ></div>
-    <script type="module" src="/src/membership/signupPage.tsx"></script>
+    <script type="module" src="/src/member/Entrance.tsx"></script>
   </body>
 </html>
