--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     />
     <title>Login</title>
   </head>
-  <body>
+  <body data-bs-theme="dark">
     <div
       id="App"
       class="d-flex align-items-center py-4"
